tests/models/struct/named/u32/fail/alias.rs
use dade::model;
#[model]
struct TestModel {
    #[field(alias = 2)]
    value: u32,
}
fn main() {}
